--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tabler": "^1.0.0-alpha.8",
     "vite": "^5.2.6"
   },
   "devDependencies": {
